# weather-mcp-demo-py

./: .gitignore  README.md  pyproject.toml
docs/: protecting-mcp-with-nevermined-payments.md
src/: app.py  cli.py  cli_low.py  client.py  server_lowlevel.py
src/local_mcp/handlers/: weather_prompt.py  weather_resource.py  weather_tool.py
src/services/: weather_service.py
